fix(navbar): Change text color of Home link to white for better visibility in style.css

--- a/page/zodiacsignlists/assets/css/style.css
+++ b/page/zodiacsignlists/assets/css/style.css
@@ -24,7 +24,7 @@ header{
 }
 .navbar #Home{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 15px;
     padding: 8px 12px;
     margin-left: 800px;
